samples/_failures_safe/1761242828_665b3b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6ea8f4ad.c: In function ‘main’:
./samples/SAFE/__tmp_6ea8f4ad.c:184:5: error: expected expression at end of input
  184 |     printf("\nTokens found (%zu):\n",
      |     ^~~~~~
./samples/SAFE/__tmp_6ea8f4ad.c:184:5: error: expected declaration or statement at end of input
